# spacescout

./: .gitignore  Cargo.toml  README.md
spacescout-app/src-tauri/: Cargo.toml  tauri.conf.json
spacescout-app/src-tauri/icons/: icon.icns
spacescout-app/src-tauri/src/: commands.rs  lib.rs  main.rs  platform.rs
spacescout-app/ui/: index.html  package.json  vite.config.ts
spacescout-app/ui/src/: App.tsx  Breadcrumb.tsx  Toolbar.tsx  TreemapCanvas.tsx  index.css  types.ts
spacescout-core/: Cargo.toml
spacescout-core/src/: lib.rs  scanner.rs  tree.rs  treemap.rs
