[package]
name = "spacescout-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "spacescout_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
spacescout-core = { path = "../../spacescout-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
